--- a/docs/Components/index.html
+++ b/docs/Components/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <meta name="generator" content="Astro v4.15.2" />
     <title>Design System porfolio.dev</title>
-    <link rel="stylesheet" href="./_astro/Components.CD8IPkaB.css" />
+    <link rel="stylesheet" href="../_astro/Components.CD8IPkaB.css" />
     <script type="module">
       document.addEventListener("astro:page-load", () => {
         const s = document.querySelectorAll("section"),
